--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,21 +9,21 @@
 
     <com.github.barteksc.pdfviewer.PDFView
         android:id="@+id/pdfView"
-        android:background="@color/bg_color"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:background="@color/bg_color" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/action_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:onClick="actionButtonClick"
         android:layout_gravity="bottom|end"
-        app:backgroundTint="@color/main_color"
-        app:borderWidth="0dp"
         android:layout_margin="20dp"
         android:contentDescription="@string/action_button"
+        android:onClick="actionButtonClick"
         android:src="@drawable/ic_plus"
+        app:backgroundTint="@color/main_color"
+        app:borderWidth="0dp"
         app:tint="@color/white" />
 
 
