--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -11,7 +11,12 @@
 
         <item name="android:statusBarColor" tools:targetApi="l">@color/status_bar_color</item>
         <item name="android:navigationBarColor">@color/navigation_bar_color</item>
+        <item name="actionOverflowButtonStyle">@style/OverFlow</item>
 
+    </style>
+
+    <style name="OverFlow" parent="@style/Widget.AppCompat.Light.ActionButton.Overflow">
+        <item name="android:src">@drawable/ic_menu_dark</item>
     </style>
 
 </resources>
