--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
     tools:context=".MainActivity">
 
     <com.github.barteksc.pdfviewer.PDFView
-        android:id="@+id/pdfView"
+        android:id="@+id/pdf_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/bg_color" />
