--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -2,11 +2,23 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <item
-        android:id="@+id/settings"
-        android:title="Settings" />
-    <item
-        android:id="@+id/hide_or_show_button"
-        android:title="Hide Button" />
+    <group android:id="@+id/general">
+        <item
+            android:id="@+id/settings"
+            android:title="Settings" />
+        <item
+            android:id="@+id/details"
+            android:title="Details" />
+    </group>
+
+    <group
+        android:id="@+id/other"
+        android:checkableBehavior="all">
+        <item
+            android:id="@+id/hide_or_show_button"
+            android:title="Hide Button" />
+
+    </group>
+
 
 </menu>
