--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -12,7 +12,7 @@
         <item name="android:statusBarColor" tools:targetApi="l">@color/status_bar_color</item>
         <item name="android:navigationBarColor">@color/navigation_bar_color</item>
         <item name="actionOverflowButtonStyle">@style/OverFlow</item>
-        <item name="android:homeAsUpIndicator">@drawable/ic_arrow_light</item>
+        <item name="android:homeAsUpIndicator">@drawable/ic_arrow_dark</item>
 
     </style>
 
