--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,30 +14,14 @@
         android:layout_height="match_parent"
         android:background="@color/bg_color" />
 
-    <LinearLayout
-        android:id="@+id/lv_warning"
+    <TextView
+        android:id="@+id/warning"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal|center_vertical"
-        android:gravity="center"
-        android:orientation="vertical"
-        android:padding="8dp">
-
-        <ImageView
-            android:layout_width="70dp"
-            android:layout_height="70dp"
-            android:layout_marginBottom="5dp"
-            android:src="@drawable/ic_file" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="You haven't selected pdf yet"
-            android:textColor="@color/secondary_text_color"
-            android:textSize="18sp" />
-
-    </LinearLayout>
-
+        android:text="You haven't selected pdf yet"
+        android:textColor="@color/secondary_text_color"
+        android:textSize="19sp" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/action_button"
