--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -2,6 +2,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <group android:id="@+id/general">
+
+        <item
+            android:id="@+id/open_pdf"
+            android:title="Open PDF" />
+
         <item
             android:id="@+id/settings"
             android:title="Settings" />
