--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,7 +24,8 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="You haven't selected pdf yet"
+            android:layout_gravity="center_horizontal"
+            android:text="@string/no_selected_pdf"
             android:textColor="@color/secondary_text_color"
             android:textSize="16sp" />
 
@@ -37,7 +38,7 @@
             android:focusable="true"
             android:onClick="openButtonClick"
             android:padding="10dp"
-            android:text="Click to select PDF"
+            android:text="@string/click_to_select_pdf"
             android:textColor="@color/main_color"
             android:textSize="18sp" />
 
@@ -56,7 +57,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|end"
             android:layout_margin="20dp"
-            android:contentDescription="@string/action_button"
+            android:contentDescription="@string/action_btn_description"
             android:onClick="actionButtonClick"
             app:backgroundTint="@color/main_color"
             app:borderWidth="0dp"
