--- a/app/src/main/res/layout/dialog.xml
+++ b/app/src/main/res/layout/dialog.xml
@@ -21,7 +21,7 @@
         android:layout_marginBottom="5dp"
         android:backgroundTint="@color/main_color"
         android:gravity="center"
-        android:text="OK"
+        android:text="@string/ok"
         android:textColor="#ffffffff" />
 
 
